public class Constant
{
    public const string ANIM_IDLE = "idle";
    public const string ANIM_RUN = "run";
    public const string ANIM_ATTACK = "attack";
    public const string ANIM_DEAD = "dead";


    public const string EANIM_RUN = "ERun";
    public const string EANIM_IDLE = "EIdle";
    public const string EANIM_ATTACK = "EAttack";
    public const string EANIM_DEAD = "EDead";

    public const string TAG_CHARACTER = "Character";
    public const string TAG_BOT = "Bot";
    public const string TAG_BLOCK = "Block";
    public const string TAG_PLAYER = "Player";
    public const string TAG_BULLET = "Bullet";
}
